kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nestjs-backend
  labels:
    app.kubernetes.io/name: nestjs-backend
