kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nestjs-backend
  namespace: nestjs-backend
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: nestjs-backend
  ports:
    - name: http
      port: 80
      targetPort: 5000
